# sp1-secp

./: Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
src/: main.rs
