[package]
version = "0.1.0"
name = "guest-secp"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
alloy-primitives = "0.8.3"
bitcoin = "0.32.2"

[patch.crates-io]
secp256k1 = { git = "https://github.com/prajwolrg/rust-secp256k1", branch = "0.29.x-sp1-patch" }
